# leverage-trader

./: .gitignore  README.md  main.css  pyproject.toml  requirements.txt  setup.py
.cursor/: knowledge-graph.json
src/: config.py  data_handler.py  indicator_handler.py  main.py  mexc_handler.py  stats_handler.py  trade_executor.py
src/utils/: __init__.py  error_handler.py
src/widgets/: __init__.py  confirmation_dialog.py  connection_status.py  mini_chart.py  position_history.py  settings_panel.py  theme_manager.py
tests/: mock_mexc_handler.py  run_tests.py  test_config.py  test_data_handler.py  test_main_calculations.py  test_metrics_display.py  test_mexc_handler.py  test_notifications.py  test_predictor.py  test_stats_handler.py
